--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--<Navbare-->
 <nav id="navbary" class="navbar navbar-expand-lg navbar-light position-fixed bg-white">
         <div class="container">
-        <div class="navbar-brand" href=""><img class="logo" src="img/Darts Logo_Logo_No BG.png" alt=""></div>
+        <div class="navbar-brand" href=""><img class="logo" src="img/Darts Logo_Logo_No BG.png" alt="DartsLogo" width="100" height="250"></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
